<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Group8Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/small_talk"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/search_sports_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:text="@string/search_sports_btn"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/search_entertainment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/search_entertainment_btn"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <Button
            android:id="@+id/sports_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:text="@string/sports_btn"
            android:textAllCaps="false"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="316dp" />

        <Button
            android:id="@+id/entertainment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/entertainment_btn"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="137dp"
            tools:layout_editor_absoluteY="252dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>