<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/title_sports"
            tools:layout_editor_absoluteX="171dp"
            tools:layout_editor_absoluteY="16dp" />

        <Spinner
            android:id="@+id/sports_querylist_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:entries="@array/sports_query_array"
            android:prompt="@string/query_prompt"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="74dp" />

        <Button
            android:id="@+id/showsports_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="right"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:text="@string/showresult_btn"
            android:textAllCaps="false"
            android:textStyle="bold" />

        <ScrollView
            android:id="@+id/SscrollView"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <Button
            android:id="@+id/SgoBack_btn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/goBack_btn"
            android:textAllCaps="false"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>